crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaLoraPlan PamojaLoraPlan;
typedef struct PamojaLoraPlanBuilder PamojaLoraPlanBuilder;
typedef struct PamojaString PamojaString;
typedef struct {
  uint32_t bandwidth_hz;
  uint16_t preamble_symbols;
  uint8_t spreading_factor;
  uint8_t coding_rate_denominator;
  uint8_t explicit_header;
  uint8_t crc;
} PamojaLoraLink;
typedef struct {
  uint8_t kind;
  uint8_t channel_list;
  uint8_t tx_param_setup;
  uint8_t join_sequence;
  uint8_t power_reference;
  uint8_t gain_allowance_db;
  uint16_t downlink_channel_block_count;
  uint16_t join_plan_count;
} PamojaLoraPlanRules;
typedef struct {
  uint8_t kind;
  uint8_t group;
  uint8_t on;
  uint8_t has_then_group;
  uint8_t then_group;
} PamojaLoraMaskControl;
typedef struct {
  uint32_t start_hz;
  uint32_t step_hz;
  uint16_t count;
  uint8_t min_data_rate;
  uint8_t max_data_rate;
} PamojaLoraChannelBlock;
typedef struct {
  PamojaLoraChannelBlock channels;
  uint32_t accept_start_hz;
  uint32_t accept_step_hz;
  uint32_t rx2_start_hz;
  uint32_t rx2_step_hz;
  uint32_t cn470_plan;
} PamojaLoraJoinPlan;
typedef struct {
  uint32_t frequency_hz;
  uint32_t ping_slot_frequency_hz;
  uint8_t data_rate;
} PamojaLoraBeacon;
typedef struct {
  uint32_t rx2_frequency_hz;
  uint16_t uplink_data_rate_count;
  uint16_t downlink_data_rate_count;
  uint16_t default_channel_count;
  uint16_t join_channel_block_count;
  uint16_t default_channel_block_count;
  uint16_t sub_band_count;
  PamojaLoraBeacon beacon;
  uint8_t rx2_data_rate;
  int8_t default_max_eirp_dbm;
  uint8_t tx_power_step_db;
  uint8_t max_tx_power_index;
  uint8_t max_rx1_data_rate_offset;
  uint8_t has_dwell_time_limit;
  uint8_t has_dwell_limited_payloads;
  uint8_t has_dwell_limited_rx1;
} PamojaLoraPlanInfo;
typedef struct {
  uint32_t bitrate_bps;
  uint32_t bandwidth_hz;
  uint8_t kind;
  uint8_t spreading_factor;
  uint8_t coding_rate_numerator;
  uint8_t coding_rate_denominator;
} PamojaLoraDataRate;
typedef struct {
  uint16_t mac_payload;
  uint16_t application;
} PamojaLoraMaxPayload;
typedef struct {
  uint32_t start_hz;
  uint32_t end_hz;
  uint32_t duty_cycle_permille;
  int8_t max_eirp_dbm;
} PamojaLoraSubBand;
PamojaStatus pamoja_lora_plan_for_region(uint32_t region, PamojaLoraPlan **out_plan);
PamojaStatus pamoja_lora_plan_for_cn470(uint32_t which, PamojaLoraPlan **out_plan);
PamojaStatus pamoja_lora_plan_rules(const PamojaLoraPlan *plan, PamojaLoraPlanRules *out_rules);
PamojaStatus pamoja_lora_plan_mask_control(const PamojaLoraPlan *plan,
                                           uint8_t value,
                                           PamojaLoraMaskControl *out_control);
PamojaStatus pamoja_lora_plan_rx1_frequency_hz(const PamojaLoraPlan *plan,
                                               uint16_t uplink_channel,
                                               uint32_t uplink_hz,
                                               uint32_t *out_frequency_hz);
PamojaStatus pamoja_lora_plan_downlink_channel_frequency_hz(const PamojaLoraPlan *plan,
                                                            uint16_t channel,
                                                            uint32_t *out_frequency_hz);
PamojaStatus pamoja_lora_plan_join_plan(const PamojaLoraPlan *plan,
                                        uint16_t index,
                                        PamojaLoraJoinPlan *out_join_plan);
PamojaStatus pamoja_lora_plan_join_plan_for_channel(const PamojaLoraPlan *plan,
                                                    uint16_t join_channel,
                                                    uint16_t *out_index,
                                                    uint16_t *out_offset);
uint8_t pamoja_lora_region_is_available(uint32_t region);
void pamoja_lora_plan_free(PamojaLoraPlan *plan);
PamojaString *pamoja_lora_plan_name(const PamojaLoraPlan *plan);
PamojaStatus pamoja_lora_plan_info(const PamojaLoraPlan *plan, PamojaLoraPlanInfo *out_info);
PamojaStatus pamoja_lora_plan_data_rate(const PamojaLoraPlan *plan,
                                        uint32_t direction,
                                        uint8_t data_rate,
                                        PamojaLoraDataRate *out_rate);
PamojaStatus pamoja_lora_plan_link_settings(const PamojaLoraPlan *plan,
                                            uint8_t data_rate,
                                            PamojaLoraLink *out_link);
PamojaStatus pamoja_lora_plan_max_payload(const PamojaLoraPlan *plan,
                                          uint32_t table,
                                          uint8_t data_rate,
                                          PamojaLoraMaxPayload *out_payload);
PamojaStatus pamoja_lora_plan_duty_cycle_permille(const PamojaLoraPlan *plan,
                                                  uint32_t frequency_hz,
                                                  uint32_t *out_permille);
PamojaStatus pamoja_lora_plan_max_eirp_dbm(const PamojaLoraPlan *plan,
                                           uint32_t frequency_hz,
                                           int8_t *out_dbm);
PamojaStatus pamoja_lora_plan_tx_power_dbm(const PamojaLoraPlan *plan,
                                           uint8_t index,
                                           int8_t max_eirp_dbm,
                                           int8_t *out_dbm);
PamojaStatus pamoja_lora_plan_rx1_data_rate(const PamojaLoraPlan *plan,
                                            uint8_t uplink_data_rate,
                                            uint8_t offset,
                                            uint8_t dwell_limited,
                                            uint8_t *out_data_rate);
PamojaStatus pamoja_lora_plan_next_backoff_data_rate(const PamojaLoraPlan *plan,
                                                     uint8_t data_rate,
                                                     uint8_t *out_data_rate);
PamojaStatus pamoja_lora_plan_channel_frequency_hz(const PamojaLoraPlan *plan,
                                                   uint16_t channel,
                                                   uint32_t *out_frequency_hz);
PamojaStatus pamoja_lora_plan_channel_block(const PamojaLoraPlan *plan,
                                            uint32_t which,
                                            uint16_t index,
                                            PamojaLoraChannelBlock *out_block);
PamojaStatus pamoja_lora_plan_sub_band(const PamojaLoraPlan *plan,
                                       uint16_t index,
                                       PamojaLoraSubBand *out_band);
PamojaStatus pamoja_lora_plan_builder_new(const char *name, PamojaLoraPlanBuilder **out_builder);